syntax = "proto3";

package pb;
option go_package = "./;pb";

service LoadAvg {
    rpc LoadAvgGetMon (LoadAvgRequest) returns (stream LoadAvgReply) {}
}

message LoadAvgRequest {
    int32 period = 1;
    int32 seconds = 2;
}

message LoadAvgReply {
    float one = 1;
    float five =2;
    float fifteen = 3;
}
